All working, including multipage and multiple tables